--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <h1>Hey, This is My Profile 👋
-        <!-- <img src="/it's me.jpg" alt="My Photo" class="profile-img"> -->
+        <img src="/it's me.jpg" alt="My Photo" class="profile-img">
 
     </h1>
 
@@ -61,5 +61,6 @@
 <footer>
     Click here- <a href="https://www.instagram.com/ankitraj2843?igsh=MWNjbHl5ZmljYm85bw==" target="_blank"><b>My insta id</b> </a>
 </footer>
+
 
 </html>
