--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <h1>Hey, This is My Profile 👋
-        <img src="/it's me.jpg" alt="My Photo" class="profile-img">
+<!--         <img src="/it's me.jpg" alt="My Photo" class="profile-img"> -->
 
     </h1>
 
@@ -64,3 +64,4 @@
 
 
 </html>
+
